--- a/limbo/affiliate/templates/mobile/mi/mi 10/mi 10.html
+++ b/limbo/affiliate/templates/mobile/mi/mi 10/mi 10.html
@@ -22,9 +22,13 @@
           <p>The 108-megapixel primary camera in the Mi 10 5G uses a large 1/1.33-inch sensor with optical stabilisation and an aperture of f/1.7. By default, images go through a 4-in-1 oversampling process. If you do the math, they should be saved as 27-megapixel images, but when we checked, the resolution of the photos was actually 25 megapixels. There's digital zoom of up to 10x if needed, or 2x when using 108-megapixel mode.</p>
           <p>it has almost everything you can think of, starting with the <span>Qualcomm Snapdragon 865 SoC</span>, LPDDR5 RAM, UFS 3.0 storage, an in-display fingerprint sensor, Wi-Fi 6, fast wireless charging, and 5G. We have the 8GB RAM + 128GB storage variant, but there's a second model with 256GB of storage. There's no microSD card slot to expand storage.</p>
           <p>the Mi 10 5G supports up to <span>30W wireless</span> charging, which promises a full charge in just 65 minutes. You'll need to buy Xiaomi's proprietary 30W wireless charger of course. The wireless charger can also work with other devices using the Qi standard, but slower. Lastly, the Mi 10 5G also supports reverse wireless charging at up to 10W.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-            <a href="https://www.amazon.in/s?k=xiaomi+Mi+10&ref=nb_sb_noss" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/s?k=xiaomi+Mi+10&ref=nb_sb_noss">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
       </div>
