--- a/limbo/affiliate/templates/mobile/mi/note 7s/note 7s.html
+++ b/limbo/affiliate/templates/mobile/mi/note 7s/note 7s.html
@@ -21,9 +21,13 @@
           <p>If we talk about design The <span>Redmi Note 7S</span> looks exactly the same as the Redmi Note 7 as well as the Redmi Note 7 Pro. Like its siblings, the Redmi Note 7S has a glass sandwich design with Corning Gorilla Glass 5 at the front and the back. This helps give the phone a premium look and feel which isn't very common at this price point. While the glossy back looks premium, it is a fingerprint magnet and picks up grease very easily. Xiaomi provides a case in the box that fits well and should help keep fingerprints off the device.</p>
           <p> The new Redmi Note 7S has the same processor and RAM options as the Redmi Note 7, but has a 48-megapixel camera like the Redmi Note 7 Pro and <span>Xiaomi</span> ships the Redmi Note 7S in three colours, Onyx Black, Sapphire Blue, and Ruby Red.</p>
           <p>The Redmi Note 7S is powered by the <span>Qualcomm Snapdragon 660 SoC</span>, which it shares with the Redmi Note 7.The Snapdragon 660 isn't as powerful as the Snapdragon 675 SoC, which powers the Redmi Note 7 Pro. Xiaomi offers the Redmi Note 7S in two variants, one with 3GB of RAM and 32GB of storage priced at Rs. 10,999, and the higher-end one with 4GB of RAM and 64GB storage variant priced at Rs. 12,999. </p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/redmi-note-7s-onyx-black-64-gb/p/itmfh75fh2ggjgag?pid=MOBFGGJ8AUXSTH6D&lid=LSTMOBFGGJ8AUXSTH6DUXD9PW&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=cf2ef4af-ede5-4696-b5c3-6d95078f9c77.MOBFGGJ8AUXSTH6D.SEARCH&ppt=sp&ppn=sp&ssid=c6u15phq400000001594890738698&qH=2f03d3b1138b616a" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form flipkart</button></a>
-            <a href="https://www.flipkart.com/search?q=Redmi%20Note%207s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/redmi-note-7s-onyx-black-64-gb/p/itmfh75fh2ggjgag?pid=MOBFGGJ8AUXSTH6D&lid=LSTMOBFGGJ8AUXSTH6DUXD9PW&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=cf2ef4af-ede5-4696-b5c3-6d95078f9c77.MOBFGGJ8AUXSTH6D.SEARCH&ppt=sp&ppn=sp&ssid=c6u15phq400000001594890738698&qH=2f03d3b1138b616a">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/search?q=Redmi%20Note%207s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
       </div>
