--- a/limbo/affiliate/templates/mobile/mi/note 8 pro/note 8 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8 pro/note 8 pro.html
@@ -28,9 +28,13 @@
         <p>64 MP (main) + 8 MP (ultra-wide) + 2 MP (macro) + 2 MP (depth sensor) quad cameras; 20 MP selfie camera</p>
         <p>4,500 mAh battery with bundled 18 W fast charger</p>
         <p>Android Pie 9.0 with MIUI 10</p>
-        <div class="aff-link">
-          <a href="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X3NZZJ1/ref=sr_1_2?dchild=1&keywords=Redmi+Note+8+Pro&qid=1594890440&sr=8-2" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-          <a href="https://www.amazon.in/s?k=Redmi+Note+8+Pro&ref=nb_sb_noss" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+        <div class="aff-link1">
+          <form action="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X3NZZJ1/ref=sr_1_2?dchild=1&keywords=Redmi+Note+8+Pro&qid=1594890440&sr=8-2">
+            <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+          </form>
+          <form action="https://www.amazon.in/s?k=Redmi+Note+8+Pro&ref=nb_sb_noss" class="affilated-link_flipcart">
+            <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+          </form>
         </div>
         <p></p>
         </div>
