--- a/limbo/affiliate/templates/mobile/mi/note 9pro max/note 9 pro max.html
+++ b/limbo/affiliate/templates/mobile/mi/note 9pro max/note 9 pro max.html
@@ -20,9 +20,13 @@
           <h4 class="content">Redmi Note 9 Pro summary</h4>
           <p><span>Xiaomi's</span> redmi series divices have grown in size, the <span>redmi note 9 pro max</span> 8.8mm in thickness and weighs 209g(7.37 oz) which make one-handed use difficult. There is a layer of Corning Gorilla Glass 5 on the diplay which should help it withstand daily usage. The big display on the Redmi Note 9 Pro Max is not an AMOLED panel and does not boast of a high refresh rate. Right above the display is a thin earpiece that also houses a white notification light.Xiaomi offers a quad-camera setup on the Redmi Note 9 Pro Max. These sensors are placed in a square-shaped module that juts out from the back of the device These sensors are placed in a square-shaped module that juts out from the back of the device. </p>
           <p>Xiaomi has dropped in the <span>Qualcomm Snapdragon 720G SoC</span> to run the show here. The Redmi Note 9 Pro and the Redmi Note 9 Pro Max share the same processor, making it harder to differentiate between the two models based on performance. Yes, you can get more RAM and storage on the Redmi Note 9 Pro Max. The variants are as follows: 6GB RAM/ 64GB storage for Rs. 16,499, 6GB RAM/128GB storage for Rs. 17,999, and 8GB RAM /128GB storage for Rs. 19,999. Redmi note 9 pro max have 5020 mAh battery and it has suport for Fast charging 33W, 50% in 30 min </p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-            <a href="https://www.amazon.in/s?k=Redmi+Note+9+Pro+Max&ref=nb_sb_noss" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/s?k=Redmi+Note+9+Pro+Max&ref=nb_sb_noss">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
