--- a/limbo/affiliate/templates/mobile/mi/redmi 8/redmi 8.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi 8/redmi 8.html
@@ -20,9 +20,13 @@
           <h4 class="content">Redmi 8 summary</h4>
           <p>Like we've already seen with the <span>Redmi 8A</span> (Review) and <span>Redmi Note 8 Pro</span> (Review), Xiaomi has given this generation of phones a pretty major design update.The <span>Redmi 8</span> 9.4 mm in thickness and weighs 188 g (6.63 oz). About storage the Redmi 8 gets that much in its base variant with an option that steps up to 4GB of RAM and 64GB of storage and MicroSD cards of up to 512GB are supported.  Both phones <span>Redmi 8</span> and <span>Redmi 8A</span> have 12-megapixel f/1.8 primary rear cameras and 8-megapixel f/2 front cameras, though the Redmi 8 also has a depth sensor on the rear.  </p>
           <p>While the exterior of this phone is impressive, Xiaomi's choice of components on the inside raises a few questions. We have the <span>Qualcomm Snapdragon 439</span> processor, which is a bit of a downgrade compared to the Snapdragon 632 used in the Redmi 7₹. Both these processors were launched at the same time last year, so Xiaomi hasn't even gone with a newer chip that might have been substantially more efficient. Interestingly, this is the same chip that powers the entry-level Redmi 8A and even the Redmi 7A. It has four ARM Cortex-A53 cores running at up to 1.45GHz and another four at 1.95GHz and integrated Adreno 505 graphics.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/redmi-8-onyx-black-64-gb/p/itmebd23d8a2ed1b?pid=MOBFKPYDZJQHGJXA&lid=LSTMOBFKPYDZJQHGJXAPMDXOB&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=7eb39bee-baa5-42c0-8d00-79a6cb033924.MOBFKPYDZJQHGJXA.SEARCH&ppt=sp&ppn=sp&ssid=e8efv76aog0000001594890817032&qH=b190950d47ba7008" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form flipkart</button></a>
-            <a href="https://www.flipkart.com/search?q=%20Redmi%208&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/redmi-8-onyx-black-64-gb/p/itmebd23d8a2ed1b?pid=MOBFKPYDZJQHGJXA&lid=LSTMOBFKPYDZJQHGJXAPMDXOB&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=7eb39bee-baa5-42c0-8d00-79a6cb033924.MOBFKPYDZJQHGJXA.SEARCH&ppt=sp&ppn=sp&ssid=e8efv76aog0000001594890817032&qH=b190950d47ba7008">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/search?q=%20Redmi%208&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
       </div>
