--- a/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
@@ -20,10 +20,13 @@
           <h4 class="content">Redmi 8A summary</h4>
           <p>Like we've already seen with the <span>Redmi 8A</span> (Review) and <span>Redmi Note 8 Pro</span> (Review), Xiaomi has given this generation of phones a pretty major design update.The <span>Redmi 8</span> 9.4 mm in thickness and weighs 188 g (6.63 oz). About storage the Redmi 8 gets that much in its base variant with an option that steps up to 32GB 2GB RAM, 32GB 3GB RAM, 64GB 4GB RAM of storage and MicroSD cards of up to 512GB are supported.  Both phones <span>Redmi 8</span> and <span>Redmi 8A</span> have 12-megapixel f/1.8 primary rear cameras and 8-megapixel f/2 front cameras, though the Redmi 8 also has a depth sensor on the rear.On the front, the Redmi 8A has a waterdrop notch that houses the selfie camera, and there's a thick chin at the base of the display, which has the Redmi logo on it.</p>
           <p>For the category it falls in, the Redmi 8A’s display is better than I expected. The smartphone features a 6.22-inch HD+ display with a resolution of 720 x 1,250 pixels and a 19:9 aspect ratio. THe redmi 8A powered by a <span> Snapdragon 439 </span>. The display also has Corning Gorilla Glass 5 for protection.Redmi 8A comes with a Type-C port for charging and a 10W fast charger bundled in the box.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form Flipkart</button></a>
-            <a href="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-          </div>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953" class="affilated-link_flipcart" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           <p></p>
       </div>
     {% endblock content%}
