--- a/limbo/affiliate/templates/mobile/mi/Note 7pro/note 7 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/Note 7pro/note 7 pro.html
@@ -21,9 +21,13 @@
           <p class="content">The <span>Redmi Note 7 Pro</span> is one of the most feature packed phones in its price bracket, bringing a premium design, capable octa-core processor, 48-megapixel camera, and fast charging support to the table. The phone packs a 6.3-inch full-HD+ (1080x2340 pixels) LTPS In-Cell display protected by a layer of Gorilla Glass 5. Content on the display looks sharp with crisp colours, but at the same time, it is also quite reflective.</p>
           <p class="content">The phone is powered by the <span>Snapdragon 675</span> processor ticking alongside up to 6GB of RAM. Be it heavy multitasking or games like PUBG Mobile and Asphalt 9, the phone barely struggles at all. The Redmi Note 7 Pro runs MIUI 10 based on <span>Android 9 Pie</span>, and even though it is rich in features, you will also have to see pesky ads. </p>
           <p class="content">The phone’s 48-megapixel main camera captures beautiful images with ample detail, high dynamic range, and good vibrancy. The night mode also performs well, while selfies captured by the 32-megapixel front camera also look sharp with natural colours and edge detection in bokeh mode. The 4,000mAh battery ensures that the Redmi Note 7 Pro easily sails past a full day of usage, while support for Qualcomm's Quick Charge 4.0 fast charging technology helps to quickly top up the battery. </p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-            <a href="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
