--- a/limbo/affiliate/templates/mobile/mi/k20/k20.html
+++ b/limbo/affiliate/templates/mobile/mi/k20/k20.html
@@ -23,11 +23,15 @@
         <p> The Redmi K20 Pro is powered by the Snapdragon 855 and employs the 48-megapixel Sony IMX586 sensor for its primary rear camera, while the Redmi K20 gets the Snapdragon 730 SoC and comes equipped with the slightly lower-end 48-megapixel Sony IMX582 sensor. The Redmi K20 features a 6.39-inch full-HD+ (1080 x 2340 pixels) HDR AMOLED display with a 19.5:9 aspect ratio, an impressive screen-to-body ratio of 91.9 percent, 403ppi pixel density, and 600 nits of peak brightness. The display is protected by Corning Gorilla Glass 5.</p>
         <p>The Redmi K20 comes in two variants – a base model with 6GB of RAM and 64GB of internal storage which is what we have for review, and a higher-end configuration with 6GB of RAM and 128GB of storage. Unfortunately, there is no microSD card slot for storage expansion.</p>
         <p>As for camera features, the Redmi K20 supports slow-mo video capture at up to 960fps and 4K video capture at 30fps. There is a dedicated night mode, a 48-megapixel mode, lighting effects, and a tonne of beautification filters to play with. The lights are kept on by a 4,000mAh battery, and this phone supports Quick Charge 3.0 so it can be topped up with the supplied 18W fast charger.</p>
-        <div class="aff-link">
-          <a href="https://www.amazon.in/Redmi-K20-Glacier-Storage-Exchange/dp/B082FNDQT7/ref=sr_1_5?dchild=1&keywords=Redmi+K20&qid=1594890513&sr=8-5" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-          <a href="https://www.amazon.in/Redmi-K20-Glacier-Storage-Exchange/dp/B082FNDQT7/ref=sr_1_5?dchild=1&keywords=Redmi+K20&qid=1594890513&sr=8-5" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-          <p></p>
+        <div class="aff-link1">
+          <form action="https://www.amazon.in/Redmi-K20-Glacier-Storage-Exchange/dp/B082FNDQT7/ref=sr_1_5?dchild=1&keywords=Redmi+K20&qid=1594890513&sr=8-5">
+            <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+          </form>
+          <form action="https://www.amazon.in/Redmi-K20-Glacier-Storage-Exchange/dp/B082FNDQT7/ref=sr_1_5?dchild=1&keywords=Redmi+K20&qid=1594890513&sr=8-5">
+            <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+          </form>
         </div>
+        <p></p>
       </div>
     {% endblock content%}
     {% block specs%}
