--- a/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
@@ -31,9 +31,13 @@
               <li>Battery capacity: 4,000 mAh (18 W fast charging)</li>
               <li>OS: Android 9 Pie, MIUI 10</li>
             </ul>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-              <a href="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1" class="affilated-link_flipcart">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
             <p></p>
         </div>
