--- a/limbo/affiliate/templates/mobile/mi/note 9pro/note 9 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/note 9pro/note 9 pro.html
@@ -21,9 +21,13 @@
           <p>The <span>Redmi Note 9 Pro</span> has just been launched in India, and its starting price of Rs. 13,999 is surprisingly low. By any standard, the Redmi Note 9 Pro is a bulky phone. At 8.8mm thick and 209g in weight, many people will find this device bulky and unwieldy and The front and rear of the Redmi Note 9 Pro are both made using Gorilla Glass 5, while the frame is polycarbonate.</p>
           <p>The next interesting design touch is the side-mounted fingerprint sensor, which is embedded into the power button. This sits in a slight recess on the right of the phone which lined up fairly well with the thumb of our right hand. </p>
           <p>In note 9 pro You get a 6.67-inch full-HD+ (1080x2400-pixel) screen which has a tall aspect ratio to accommodate the front camera. What might surprise many fans who follow current trends, because it is a standard 60Hz panel and doesn't have a 90Hz refresh rate like. Redmi note 9 pro powered by <span>Snapdragon 720G SoC </span> isn't powerful enough.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro&qid=1594890388&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-            <a href="https://www.amazon.in/s?k=Redmi+Note+9+Pro&ref=nb_sb_noss" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro&qid=1594890388&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/s?k=Redmi+Note+9+Pro&ref=nb_sb_noss">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
       </div>
