one buyton error check

--- a/limbo/affiliate/templates/mobile/mi/mi_page/mi_page.html
+++ b/limbo/affiliate/templates/mobile/mi/mi_page/mi_page.html
@@ -60,7 +60,7 @@
     <div class="content">
       <div class="content_body">
         <div class="content_img">
-          <img  src="{% static 'image/mobile/mi/redmi-note-9-pro-1.jpg' %}"alt="">
+          <img  src="{% static 'image/mobile/mi/redmi-note-9-pro-1.jpg' %}" alt="">
         </div>
         <div class="content_info">
 
@@ -85,7 +85,7 @@
     <div class="content">
       <div class="content_body">
         <div class="content_img">
-          <img  src="{% static 'image/mobile/mi/redmi-note-8-pro-1.jpg' %}"alt="">
+          <img  src="{% static 'image/mobile/mi/redmi-note-8-pro-1.jpg' %}" alt="">
         </div>
         <div class="content_info">
           <h1 class="content_tittle"><span>REVIEW</span> Redmi Note 8 Pro: 6/64GB for 15,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=5jWhgMMw_eQ">http://www.youtube.com </a></h1>
@@ -171,7 +171,7 @@
             <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1" class="affilated-link_flipcart">
+            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
@@ -196,7 +196,7 @@
             <form action="https://www.flipkart.com/redmi-note-7s-onyx-black-64-gb/p/itmfh75fh2ggjgag?pid=MOBFGGJ8AUXSTH6D&lid=LSTMOBFGGJ8AUXSTH6DUXD9PW&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=cf2ef4af-ede5-4696-b5c3-6d95078f9c77.MOBFGGJ8AUXSTH6D.SEARCH&ppt=sp&ppn=sp&ssid=c6u15phq400000001594890738698&qH=2f03d3b1138b616a">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=Redmi%20Note%207s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+            <form action="https://www.flipkart.com/search?q=Redmi%20Note%207s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
@@ -246,7 +246,7 @@
             <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953" class="affilated-link_flipcart" class="affilated-link_flipcart">
+            <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
