--- a/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
@@ -24,7 +24,7 @@
             <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953" class="affilated-link_flipcart" class="affilated-link_flipcart">
+            <form action="https://www.flipkart.com/redmi-8a-sunset-red-32-gb/p/itm5474ed67d23bf?pid=MOBFKF98FTTEN832&lid=LSTMOBFKF98FTTEN832NKEHTF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=572c85a9-aa44-455e-8ebc-4018036f7687.MOBFKF98FTTEN832.SEARCH&ppt=sp&ppn=sp&ssid=7q3267b05s0000001594891005249&qH=b45ee9aff81e9953">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           <p></p>
