--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 3T/OnePlus_3T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 3T/OnePlus_3T.html
@@ -20,11 +20,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} summary</h4>
           <p class="content">OnePlus 3T smartphone comes with the 5.5-inch full HD (1920*1080 pixels) AMOLED display. The OnePlus 3T is powered by the Qualcomm Snapdragon 821 quad core chipset clocked at 2.35GHz paired with 6GB RAM and comes with 64GB internal storage. It does not support expandable memory which is demerit for the OnePlus 3T. The OnePlus 3T comes with the 16-megapixel camera on the both sides front as well as rear and is powered by the 3400mah battery which may last for about 4-5 hours on normal usage. It comes withfingerprint sensor which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 6.0.1 (Marshmallow) which can be upgradable to Android 9.0 (Pie).</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/OnePlus-3T-Gunmetal-64GB-memory/dp/B01FM7JDEO?th=1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/OnePlus-3T-Gunmetal-64GB-memory/dp/B01FM7JDEO?th=1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/OnePlus-3T-Gunmetal-64GB-memory/dp/B01FM7JDEO?th=1" class="affilated-link_amazon">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/OnePlus-3T-Gunmetal-64GB-memory/dp/B01FM7JDEO?th=1" class="affilated-link_amazon">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
