--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 5/OnePlus_5.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 5/OnePlus_5.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} summary</h4>
           <p class="content">OnePlus 5 smartphone comes with the 5.5-inch full HD (1080*1920 pixels) Optic AMOLED display. The OnePlus 5 is powered by the Qualcomm Snapdragon 835 octa core chipset clocked at 2.45GHz paired with 6GB RAM and comes with 64GB and 8GB RAM 128GB internal storage. It does not support expandable memory which might be diappointment for some users. The OnePlus 5 comes with the dual camera at rear 16MP wide angle camera and 20MP main camera, It has 16MP selfie camera which supports video recording at 1080px (gyro-EIS) and is powered by Non-removable 3300mah battery which support fast charge feature. It comes with fingerprint sensor which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 7.1.1 (Nougat) which can be upgradable to Android 10.0, Oxygen OS 10.0.0.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/OnePlus-Slate-Gray-64GB-memory/dp/B01NAKTR2H/ref=sr_1_1?dchild=1&keywords=oneplus+5&qid=1594895062&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/OnePlus-Slate-Gray-64GB-memory/dp/B01NAKTR2H/ref=sr_1_1?dchild=1&keywords=oneplus+5&qid=1594895062&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/OnePlus-Slate-Gray-64GB-memory/dp/B01NAKTR2H/ref=sr_1_1?dchild=1&keywords=oneplus+5&qid=1594895062&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/OnePlus-Slate-Gray-64GB-memory/dp/B01NAKTR2H/ref=sr_1_1?dchild=1&keywords=oneplus+5&qid=1594895062&sr=8-1">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
