--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 6T/OnePlus_6T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 6T/OnePlus_6T.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} summary</h4>
           <p class="content">OnePlus 6T smartphone comes with the 6.41-inch full HD (1080*2340 pixels) Optic AMOLED display. The OnePlus 6T is powered by the Qualcomm Snapdragon 845 octa core chipset clocked at 2.8GHz paired with 128GB 6GB RAM, 128GB 8GB RAM and 256GB 8GB RAM. It has glass body at both the sides font and back with aluminium which gives a premium look to the phone. The OnePlus 6T comes with the dual rear camera 16MP wide angle camera and 20MP main camera, It has 16MP selfie camera which supports video recording at 1080@30fps (gyro-EIS) and is powered by Non-removable 3700mah battery which support fast charge feature. It comes with fingerprint in-display touch which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 9.0 (Pie) which can be upgradable to Android 10.0, Oxygen OS 10.3.1.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/oneplus-6t-speed-orange-256-gb/p/itm481488ed3d219?pid=MOBFKFPEXZUY9VBV&lid=LSTMOBFKFPEXZUY9VBVV6WN6D&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=76f092bc-1a48-48b2-ac85-1e7bd446d892.MOBFKFPEXZUY9VBV.SEARCH&ppt=sp&ppn=sp&ssid=qcosu1k1ds0000001594894957577&qH=8a6c02f7c5300ef2" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/oneplus-6t-speed-orange-256-gb/p/itm481488ed3d219?pid=MOBFKFPEXZUY9VBV&lid=LSTMOBFKFPEXZUY9VBVV6WN6D&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=76f092bc-1a48-48b2-ac85-1e7bd446d892.MOBFKFPEXZUY9VBV.SEARCH&ppt=sp&ppn=sp&ssid=qcosu1k1ds0000001594894957577&qH=8a6c02f7c5300ef2" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/oneplus-6t-speed-orange-256-gb/p/itm481488ed3d219?pid=MOBFKFPEXZUY9VBV&lid=LSTMOBFKFPEXZUY9VBVV6WN6D&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=76f092bc-1a48-48b2-ac85-1e7bd446d892.MOBFKFPEXZUY9VBV.SEARCH&ppt=sp&ppn=sp&ssid=qcosu1k1ds0000001594894957577&qH=8a6c02f7c5300ef2">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/oneplus-6t-speed-orange-256-gb/p/itm481488ed3d219?pid=MOBFKFPEXZUY9VBV&lid=LSTMOBFKFPEXZUY9VBVV6WN6D&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=76f092bc-1a48-48b2-ac85-1e7bd446d892.MOBFKFPEXZUY9VBV.SEARCH&ppt=sp&ppn=sp&ssid=qcosu1k1ds0000001594894957577&qH=8a6c02f7c5300ef2">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
