--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7T/OnePlus_7T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7T/OnePlus_7T.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} summary</h4>
           <p class="content">OnePlus 7T smartphone comes with the 6.55-inch full HD (1080*2400 pixels) Fluid AMOLED display. The OnePlus 7T is powered by the Qualcomm Snapdragon 855+ octa core chipset clocked at 2.96GHz paired with 128GB 8GB RAM and 256GB 8GB RAM with UFS 3.0 storage technology. It has Gorilla Glass body at both the sides font and back with aluminium frame which gives it a premium look. The OnePlus 7T comes with the triple rear camera 48MP wide angle and standard camera, 12MP telephoto camera and 16MP ultrawide auto-focus camera, It has 16MP selfie camera which supports video recording at 1080@30fps (gyro-EIS) and is powered by Non-removable 3800mah battery which support fast charging at 30W. It comes with fingerprint in-display touch which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 10.0, Oxygen OS 10.0.7.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/oneplus-7t-frosted-silver-128-gb/p/itma74f3aece46b1?pid=MOBFKWSYFG45UYEB&lid=LSTMOBFKWSYFG45UYEBOVZHMA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=6b1a61c4-e60b-4f24-95a2-eafbe69ef50c.MOBFKWSYFG45UYEB.SEARCH&ppt=sp&ppn=sp&ssid=nkkq7holm80000001594894734877&qH=36ba0b0bbf2cf86b" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/oneplus-7t-frosted-silver-128-gb/p/itma74f3aece46b1?pid=MOBFKWSYFG45UYEB&lid=LSTMOBFKWSYFG45UYEBOVZHMA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=6b1a61c4-e60b-4f24-95a2-eafbe69ef50c.MOBFKWSYFG45UYEB.SEARCH&ppt=sp&ppn=sp&ssid=nkkq7holm80000001594894734877&qH=36ba0b0bbf2cf86b" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/oneplus-7t-frosted-silver-128-gb/p/itma74f3aece46b1?pid=MOBFKWSYFG45UYEB&lid=LSTMOBFKWSYFG45UYEBOVZHMA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=6b1a61c4-e60b-4f24-95a2-eafbe69ef50c.MOBFKWSYFG45UYEB.SEARCH&ppt=sp&ppn=sp&ssid=nkkq7holm80000001594894734877&qH=36ba0b0bbf2cf86b">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/oneplus-7t-frosted-silver-128-gb/p/itma74f3aece46b1?pid=MOBFKWSYFG45UYEB&lid=LSTMOBFKWSYFG45UYEBOVZHMA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=6b1a61c4-e60b-4f24-95a2-eafbe69ef50c.MOBFKWSYFG45UYEB.SEARCH&ppt=sp&ppn=sp&ssid=nkkq7holm80000001594894734877&qH=36ba0b0bbf2cf86b">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
