--- a/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
+++ b/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
@@ -122,10 +122,10 @@
           <p></p>
 
           <div class="aff-link1">
-            <form action="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1" class="affilated-link_amazon">
+            <form action="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1" class="affilated-link_flipcart">
+            <form action="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
