--- a/limbo/affiliate/templates/mobile/mi/Note 7pro/note 7 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/Note 7pro/note 7 pro.html
@@ -25,7 +25,7 @@
             <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1" class="affilated-link_flipcart">
+            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
