--- a/limbo/affiliate/templates/mobile/mi/note 7s/note 7s.html
+++ b/limbo/affiliate/templates/mobile/mi/note 7s/note 7s.html
@@ -25,7 +25,7 @@
             <form action="https://www.flipkart.com/redmi-note-7s-onyx-black-64-gb/p/itmfh75fh2ggjgag?pid=MOBFGGJ8AUXSTH6D&lid=LSTMOBFGGJ8AUXSTH6DUXD9PW&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=cf2ef4af-ede5-4696-b5c3-6d95078f9c77.MOBFGGJ8AUXSTH6D.SEARCH&ppt=sp&ppn=sp&ssid=c6u15phq400000001594890738698&qH=2f03d3b1138b616a">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=Redmi%20Note%207s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+            <form action="https://www.flipkart.com/search?q=Redmi%20Note%207s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
