--- a/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
@@ -35,7 +35,7 @@
               <form action="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1" class="affilated-link_flipcart">
+              <form action="https://www.amazon.in/Redmi-Note-Cosmic-Purple-Storage/dp/B07X3P1N2V/ref=sr_1_1?dchild=1&keywords=Redmi+Note+8&qid=1594890640&sr=8-1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
