--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7/OnePlus_7.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7/OnePlus_7.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} summary</h4>
           <p class="content">OnePlus 7 smartphone comes with the 6.41-inch full HD (1080*2340 pixels) Optic AMOLED display. The OnePlus 7 is powered by the Qualcomm Snapdragon 855 octa core chipset clocked at 2.84GHz paired with 128GB 6GB RAM and 256GB 8GB RAM. It has Gorilla Glass body at both the sides font and back with aluminium frame which gives it a premium look. The OnePlus 7 comes with the dual rear camera 48MP wide angle and standard camera and 5MP in-depth sensing camera, It has 16MP selfie camera which supports video recording at 1080@30fps (gyro-EIS) and is powered by Non-removable 3700mah battery which support fast charge feature. It comes with fingerprint in-display touch which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 9.0 (Pie) which can be upgradable to Android 10.0, Oxygen OS 10.0.5.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Test-Exclusive-609/dp/B07HGJFVL2/ref=sr_1_1?dchild=1&keywords=oneplus+7&qid=1594894886&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Test-Exclusive-609/dp/B07HGJFVL2/ref=sr_1_1?dchild=1&keywords=oneplus+7&qid=1594894886&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-Exclusive-609/dp/B07HGJFVL2/ref=sr_1_1?dchild=1&keywords=oneplus+7&qid=1594894886&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Test-Exclusive-609/dp/B07HGJFVL2/ref=sr_1_1?dchild=1&keywords=oneplus+7&qid=1594894886&sr=8-1">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
