--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
@@ -18,10 +18,13 @@
         <div class="info">
           <h4 class="content">{{product_name}} summary</h4>
           <p class="content">OnePlus 8 Pro smartphone comes with the 6.78-inch full HD (1440*3168 pixels) Fluid AMOLED display. The OnePlus 8 Pro is powered by the Qualcomm Snapdragon 865 octa core chipset clocked at 2.84GHz paired with 128GB 8GB RAM and 256GB 12GB RAM with UFS 3.0 storage technology. It has Gorilla Glass body at both the sides font and back with aluminium frame which gives it a premium look. The OnePlus 8 Pro comes with the quad rear camera 48MP wide angle and standard camera, 8MP telephoto camera, 48MP ultrawide auto-focus camera and 5MP color filter camera, It has 16MP selfie camera which supports video recording at 1080@30fps (gyro-EIS) and is powered by Non-removable 4510mah battery which support fast charging at 30W. It comes with fingerprint in-display touch which make easier to user to unlock the phone and it supports 5G LTE network.It runs on Android 10.0, Oxygen OS 10.0.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
         </div>
       </div>
