--- a/limbo/affiliate/templates/page/mobile_page.html
+++ b/limbo/affiliate/templates/page/mobile_page.html
@@ -68,10 +68,10 @@
           <p></p>
 
           <div class="aff-link1">
-            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_amazon">
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_flipcart">
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
